11/03 holder 색상변경 및 모바일 이벤트 애니메이션 그대로 수정

--- a/css/main.css
+++ b/css/main.css
@@ -473,11 +473,11 @@ body {
 }
 
 #content_text > .container_notice > .notice_item:hover > .post > a {
-      color: blue;
+      color: #2a8d88;
 }
 
 #content_text > .container_notice > .notice_item:hover > .date > p {
-      color: blue;
+      color: #2a8d88;
 }
 
 #content_text > .container_notice > .notice_item > .post > a::before {
@@ -488,7 +488,7 @@ body {
       height: 2px;
       bottom: 0;
       left: 0;
-      background-color: blue;
+      background-color: #2a8d88;
       transform: scaleX(0);
       transform-origin: top left;
       transition: transform 0.3s ease;
@@ -565,11 +565,11 @@ body {
 }
 
 #content_text > .container_news > .news_item:hover > .post > a {
-      color: blue;
+      color: #2a8d88;
 }
 
 #content_text > .container_news > .news_item:hover > .date > p {
-      color: blue;
+      color: #2a8d88;
 }
 
 #content_text > .container_news > .news_item > .post > a::before {
@@ -580,7 +580,7 @@ body {
       height: 2px;
       bottom: 0;
       left: 0;
-      background-color: blue;
+      background-color: #2a8d88;
       transform: scaleX(0);
       transform-origin: top left;
       transition: transform 0.3s ease;
@@ -849,7 +849,58 @@ body {
             width: calc(100% - 40px);
             height: auto;
             margin: 0 10px 20px;
+
+            border: 0;
+            box-sizing: border-box;
+            margin: 1em;
+            box-shadow: inset 0 0 0 2px #ccc;
+            position: relative;
       }
+
+      #content_event > #event_container > .event_item:hover {
+            border: 5px solid #9ed5d2;
+      }
+
+      /* .event_item::before, .event_item::after {
+            box-sizing: inherit;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+      }
+      .event_item {
+            transition: color 0.25s;
+      }
+      .event_item::before, .event_item::after {
+            border: 5px solid transparent;
+            width: 0;
+            height: 0;
+      }
+      .event_item::before {
+            top: 0;
+            left: 0;
+      }
+      .event_item::after {
+            bottom: 0;
+            right: 0;
+      }
+      .event_item:hover {
+            color: #9ed5d2;
+      }
+      .event_item:hover::before, .event_item:hover::after {
+            width: 100%;
+            height: 100%;
+      }
+      .event_item:hover::before {
+            border-top-color: #9ed5d2;
+            border-right-color: #9ed5d2;
+            transition: width 0.25s ease-out, height 0.25s ease-out 0.25s;
+      }
+      .event_item:hover::after {
+            border-bottom-color: #9ed5d2;
+            border-left-color: #9ed5d2;
+            transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s, height 0.25s ease-out 0.75s;
+      } */
 
       /* 작은 이미지 슬라이더 */
       #small_image_slider > h3 {
