--- a/css/common.css
+++ b/css/common.css
@@ -219,14 +219,15 @@ ul { list-style: none; }
       }
 
       #main_footer > .address {
-            font-size: 13px;
-            line-height: 23px;
-            margin-left: 0;
+            font-size: 12px;
+            line-height: 22px;
+            margin-left: 8px;
+            margin-right: 8px;
             text-align: center;
       }
 
       #main_footer > .info {
-            font-size: 12px;
-            line-height: 12px;
+            font-size: 10px;
+            line-height: 10px;
       }
 }
