11/18 수정(메인 큰슬라이드 show/hide, 기타 텍스트 간격 수정)

--- a/css/announce.css
+++ b/css/announce.css
@@ -255,6 +255,7 @@ a {
       #main_aside > ul > li {
             float: left;
             text-align: center;
+            margin-right: 15px;
       }
 
       #main_aside > ul > li > a {
